language options continuing

--- a/kelinative/assets/i18n/en.json
+++ b/kelinative/assets/i18n/en.json
@@ -5,7 +5,8 @@
 	  "currentlocation": "Current location",
 	  "sort": "Sort by",
 	  "filter": "Filter",
-	  "cameralocation": "Camera location"
+	  "cameralocation": "Camera location",
+	  "chooselanguage": "Choose language"
 
     }
   }
