--- a/kelinative/assets/i18n/fi.json
+++ b/kelinative/assets/i18n/fi.json
@@ -5,7 +5,8 @@
 	  "currentlocation": "Oma sijainti",
 	  "sort": "Järjestä",
 	  "filter": "Suodata",
-	  "cameralocation": "Kameran sijainti"
+	  "cameralocation": "Kameran sijainti",
+	  "chooselanguage": "Valitse kieli"
 
 
     }
