--- a/kelinative/assets/i18n/fi.json
+++ b/kelinative/assets/i18n/fi.json
@@ -6,7 +6,10 @@
 	  "sort": "Järjestä",
 	  "filter": "Suodata",
 	  "cameralocation": "Kameran sijainti",
-	  "chooselanguage": "Valitse kieli"
+	  "chooselanguage": "Valitse kieli",
+	  "repo": "Repo: ",
+	  "license": "Lisenssi: ",
+	  "nogps": "Sijainti ei ole saatavilla"
 
 
     }
